// awesome.proto
package awesomepackage;
syntax = "proto3";

message AwesomeMessage {
     int32 a = 1;
    // int32 num = 4096;
    // string awesome_field = 30; // becomes awesomeField
}

message AwesomeNameMessage {
   string awesome_string = 1; // becomes awesomeField
}

message GenericMessage {
    optional AwesomeMessage messageNumber = 1;
    optional AwesomeNameMessage nameMessage = 2;
 }